[package]
name = "complex_lib"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib/lib.rs"     # The source file of the target.
edition = "2021"        # The edition of the target.
crate-type = ["cdylib"] # The crate types to generate.
#required-features = [] # Features required to build this target (N/A for lib).


[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
nom = "7.1.3"
derive_more = "0.99.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
    'console',
]
