[package]
name = "complex"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ffrancesc/complex"
description = "Having fun drawing complex-valued functions and fractals"

[lib]
path = "lib/lib.rs"
edition = "2021"
crate-type = ["cdylib"]


[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
nom = "7.1.3"
derive_more = "0.99.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
    'console',
]
